# aida_agent_app

./: LICENSE  MANIFEST.in  README.md  __init__.py  hooks.py  install_aida.py  package.json  pyproject.toml  requirements.txt  setup.py  setup_aida_settings.py
aida_agent_app/: api.py  app.py  boot.py  hooks.py  modules.txt  patches.txt
aida_agent_app/aida_agent/: __init__.py
aida_agent_app/config/: __init__.py  desktop.py
aida_agent_app/doctype/: __init__.py
aida_agent_app/doctype/aida_agent_settings/: __init__.py  aida_agent_settings.js  aida_agent_settings.json  aida_agent_settings.py
aida_agent_app/public/: build.json  manifest.json
aida_agent_app/public/css/: aida_agent.css
aida_agent_app/public/js/: aida_agent.js
aida_agent_app/www/: aida_agent.html  aida_agent.py
tests/: __init__.py  test_api.py
